Fix spacing on 'more' section

--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ html {
 }
 
 .my-padding-bottom {
-  padding-bottom: 5rem;
+  padding-bottom: 6.5rem;
 }
 
 .my-padding-top {
